2010-10-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: documented --model-huge and other small updates

2010-10-17 Borut Razem <borut.razem AT siol.net>

	* support/cpp/sdcpp-opts.c:
	  fixed bug #3088672: -M (& -MM) not suppressing warnings
	* doc/sdccman.lyx: small cosmetic changes

2010-10-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/C8051F920.h: patch 3088689, thanks Steven Borley

2010-10-16 Raphael Neider <rneider AT web.de>

	* device/lib/Makefile.in, device/non-free/lib/Makefile.in:
	  fix parallel make on cygwin by preventing multiple rules
	  from generating the same library files

2010-10-14 Raphael Neider <rneider AT web.de>

	* device/lib/pic/configure.in,
	  device/lib/pic16/configure.ac,
	  device/non-free/lib/pic/configure.in,
	  device/non-free/lib/pic16/configure.ac: abort configure if gputils
	  are unavailable while the pic14 or pic16 port is enabled
	* device/lib/pic/configure,
	  device/lib/pic16/configure,
	  device/non-free/lib/pic/configure,
	  device/non-free/lib/pic16/configure: regenerated
	* device/non-free/lib/Makefile.in: avoid trying to install from
	  non-existing BUILDDIR (if both pic ports are disabled)
	* doc/sdccman.lyx: fix supported pic14 devices (16hv616 and 16hv785)
	* src/SDCCmain.c (setIncludePath): do not use 'target' uninitialized

2010-10-12 Raphael Neider <rneider AT web.de>

	* src/SDCCmain.c (setIncludePath): handle special case of pic14 paths
	* src/pic/main.c (__pic14_initPaths): removed, handled in SDCCmain.c

2010-10-12 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic/Makefile.in, device/non-free/lib/pic/Makefile.in:
	  fixed target "all" if gputils not found

2010-10-11 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: fixes proposed by Sebastien Lorquet

2010-10-10 Borut Razem <borut.razem AT siol.net>

	* support/cpp/sdcpp-diagnostic.c, support/cpp/sdcpp.h:
	  define inhibit_warnings
	* src/SDCCmain.c: removed readCfgFile() call